# Apache-Authmemcookie-Module

./: .gitignore  .travis.yml  CONFIG.md  ChangeLog  Makefile  Makefile.in  README.md  _config.yml  buildconf.sh  circle.yml  configure  configure.ac  configure.in  mod_auth_memcookie.c  mod_auth_memcookie.h.in
.circleci/: config.yml
.github/workflows/: build.yaml
_layouts/: default.html
docs/: readme.htm
docs/readme_files/: memcached.css
m4/: ax_apache.m4  ax_libmemcache.m4  ax_libmemcached.m4
samples/: httpd.conf  login.php  login_post.php
